# haven

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  Dockerfile  Doxyfile  MAINTAINERS  Makefile  README.md  SECURITY.md  linker-guest-b.ld  linker-guest.ld  linker.ld  vercel.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: isolation-guardian.agent.md  platform-bringup.agent.md
.github/skills/thesis-evidence/: SKILL.md
.github/workflows/: benchmark.yml  ci.yml  cross-os.yml  evidence-pack.yml  nightly.yml  static-analysis.yml  vercel.yml
arch/arm64/: boot.S  context.S  cpu.c  entry.S  irq.c  mm.c  partition.S  timer.c
arch/arm64/include/asm/: gic.h  page.h  smmu.h  sysregs.h
cmake/: arm64.cmake  flags.cmake  host.cmake
configs/: README.md
configs/arm64/: imx8qm-mek.yaml  imx95-devkit.yaml  qemu-virt.yaml
configs/riscv/: README.md  qemu-riscv64.yaml
configs/x86/: README.md  qemu-x86_64.yaml
docs/api/: API_PLACEHOLDER.md
docs/architecture/: ISOLATION_MODEL.md  NAMING_RATIONALE.md  OVERVIEW.md  REPOSITORY_STRUCTURE.md  THESIS_DEEP_DIVE.md
docs/contributing/: DEVELOPMENT_GUIDE.md  RELEASE_PROCESS.md  REVIEW_CHECKLIST.md  TESTING_GUIDE.md
docs/methodology/: AI_WORKFLOW_PLAYBOOK.md  BENCHMARK_BASELINE.md  BRANCH_PROTECTION_POLICY.md  CHAPTER_TRACEABILITY.md  CI_STRATEGY.md  CI_TROUBLESHOOTING.md  EVALUATION_PLAN.md  GITHUB_PROTECTION_SETUP.md  IMX95_EVIDENCE_TEMPLATE.md  PHYSICAL_BOARD_VALIDATION.md  VERCEL_DEPLOYMENT.md  VIRTUAL_PLATFORM_VALIDATION.md
docs/porting/: CROSS_OS_VIRTUALIZATION_RUNBOOK.md  IMX95_EVIDENCE_CAPTURE.md  IMX95_HARDWARE_SETUP.md  IMX95_VALIDATION_RUNBOOK.md  PORTING_GUIDE.md
docs/roadmap/: DESCRIPTION.md  MILESTONES.md  ONE_YEAR_RELEASE_PLAN.md
docs/roadmap/releases/: R1_MONTH_1_3.md  R2_MONTH_4_6.md  R3_MONTH_7_9.md  R4_MONTH_10_12.md  README.md
docs/safety/: ASSUMPTIONS.md  MISRA_DEVIATION_RECORD.md  STATIC_ANALYSIS_POLICY.md  THREAT_MODEL.md
docs/thesis/: README.md  REPRODUCIBILITY_APPENDIX.md
drivers/guest-tools/: CMakeLists.txt  Makefile  haven_ioctl.h  haven_tool.c
drivers/iommu/: Makefile  smmu_v3.c  smmu_v3.h
drivers/irqchip/: Makefile  gic_v3.c  gic_v3.h
drivers/linux/: Kbuild  README.md  haven_driver.c
drivers/uart/: Makefile  imx_uart.c  pl011.c  uart.h
include/: README.md
include/haven/: budget_sched.h  cpu_context.h  el2_exceptions.h  freertos_integration.h  guest_uart.h  iommu.h  irq_ownership.h  platform.h  smmu.h  stage2.h  string.h  timer.h  types.h
scripts/: build-arm64.sh  build.sh  check-configs.py  check-configs.sh  check-traceability.sh  ci-preflight.sh  ci-validate.sh  compare-evidence.py  package-evidence.sh  qemu-run.sh  qemu-smoke.sh  release.sh  style-check.sh  test.sh
scripts/ci/: bench-regression.sh  bench-update-baseline.sh  check-traceability.sh  ci-metadata.sh  ci-preflight.sh  static-analysis.sh
scripts/compile/: build-arm64.sh  check-configs.sh
scripts/demo/: conference-demo.sh
scripts/dev/: fix-emdash.sh  format.sh  release.sh  setup-hooks.sh  style-check.sh  test.sh
scripts/evidence/: benchmark-baseline.py  compare-metadata.py
scripts/qemu/: qemu-run.sh  qemu-smoke.sh
site/: index.html
src/common/: panic.c  printk.c  spinlock.c  string.c
src/core/: README.md  init.c  partition.c
src/core/dma/: smmu.c
src/core/exc/: el2_exceptions.c
src/core/iommu/: iommu_policy.c
src/core/irq/: ownership.c
src/core/mm/: stage2.c
src/core/sched/: budget.c
src/core/time/: timer.c
src/guest/drivers/: uart.c
src/guest/rtos/: freertos_integration.c
src/platform/: platform.h
src/platform/imx8qm-mek/: platform.c
src/platform/imx95-devkit/: memory.h  platform.c
src/platform/qemu-virt/: memory.h  platform.c
tests/: CMakeLists.txt
tests/benchmarks/: bench_isolation_latency.c  bench_smmu_policy.c  bench_stage2_fault.c  bench_temporal_isolation.c  latency-baseline.json
tests/common/: printk_stub.c
tests/demos/: demo_two_partition.c  guest_a_entry.S  guest_b_entry.S
tests/integration/: README.md  test_fault_injection.c  test_isolation_flow.c  test_isolation_negative.c  test_secondary_cpu_isolation.c  test_smmu_hardware.c
tests/isolation/: README.md  test_spatial_isolation.c  test_temporal_isolation.c
tests/selftests/: test_hypervisor_invariants.c
tests/unit/: README.md  test_core_stubs.c  test_el2_exceptions.c  test_freertos_integration.c  test_guest_uart.c  test_iommu_policy.c  test_smmu_dma.c  test_timer.c
tools/analysis/: README.md  evidence_report.py  jitter_plot.py  latency_analyzer.py
tools/config-gen/: README.md
tools/scripts/: README.md  cross-compile.sh  qemu-run.sh  tcb-loc.sh
verification/: Makefile  README.md
verification/coq/: BudgetScheduler.v  IsolationModel.v  README.md  Stage2Policy.v
verification/isabelle/: HavenIsolation.thy  README.md  ROOT
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: Head.astro
website/src/content/docs/: index.mdx
website/src/content/docs/architecture/: budget-scheduler.mdx  irq-ownership.mdx  isolation-model.mdx  overview.mdx  smmu-dma.mdx  stage2-mmu.mdx
website/src/content/docs/getting-started/: introduction.mdx  quickstart.mdx  structure.mdx
website/src/content/docs/platform/: imx95.mdx  porting.mdx  qemu-arm64.mdx
website/src/content/docs/reference/: api.mdx  changelog.mdx  contributing.mdx  faq.mdx  security.mdx
website/src/content/docs/thesis/: background.mdx  evaluation.mdx  evidence.mdx  milestones.mdx  traceability.mdx
website/src/styles/: custom.css
